# celeborn

client/src/main/java/org/apache/celeborn/client/: ShuffleClientImpl.java
client/src/main/java/org/apache/celeborn/client/read/: CelebornInputStream.java
client/src/main/scala/org/apache/celeborn/client/: CommitManager.scala  LifecycleManager.scala  RequestLocationCallContext.scala
client/src/main/scala/org/apache/celeborn/client/commit/: CommitHandler.scala  MapPartitionCommitHandler.scala  ReducePartitionCommitHandler.scala
client/src/test/java/org/apache/celeborn/client/: ShuffleClientSuiteJ.java
common/src/main/java/org/apache/celeborn/common/network/protocol/: LanguageType.java  TransportMessage.java
common/src/main/scala/org/apache/celeborn/common/protocol/message/: ControlMessages.scala
common/src/main/scala/org/apache/celeborn/common/rpc/netty/: NettyRpcEnv.scala
common/src/main/scala/org/apache/celeborn/common/serializer/: JavaSerializer.scala
common/src/main/scala/org/apache/celeborn/common/util/: Utils.scala
common/src/test/scala/org/apache/celeborn/common/util/: UtilsSuite.scala
cpp/: CMakeLists.txt  README.md
cpp/celeborn/: CMakeLists.txt
cpp/celeborn/client/: CMakeLists.txt  ShuffleClient.cpp  ShuffleClient.h
cpp/celeborn/client/reader/: CelebornInputStream.cpp  CelebornInputStream.h  WorkerPartitionReader.cpp  WorkerPartitionReader.h
cpp/celeborn/client/tests/: WorkerPartitionReaderTest.cpp
cpp/celeborn/client/writer/: PushState.h  PushStrategy.cpp  PushStrategy.h
cpp/celeborn/conf/: BaseConf.cpp  BaseConf.h  CMakeLists.txt  CelebornConf.cpp  CelebornConf.h
cpp/celeborn/conf/tests/: CMakeLists.txt
cpp/celeborn/example/: CMakeLists.txt  ReaderClient.cpp
cpp/celeborn/memory/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt
cpp/celeborn/network/: CMakeLists.txt  Message.cpp  Message.h  MessageDecoder.h  MessageDispatcher.cpp  MessageDispatcher.h  NettyRpcEndpointRef.cpp  NettyRpcEndpointRef.h  TransportClient.cpp  TransportClient.h  TransportMessage.cpp  TransportMessage.h
cpp/celeborn/network/tests/: CMakeLists.txt  MessageDecoderTest.cpp  MessageDispatcherTest.cpp  MessageTest.cpp  NettyRpcEndpointRefTest.cpp  TransportClientTest.cpp
cpp/celeborn/proto/: CMakeLists.txt  TransportMessagesCpp.proto
cpp/celeborn/protocol/: CMakeLists.txt  ControlMessages.cpp  ControlMessages.h  Encoders.h  PartitionLocation.cpp  PartitionLocation.h  StatusCode.h  TransportMessage.cpp
cpp/celeborn/protocol/tests/: ControlMessagesTest.cpp  PartitionLocationTest.cpp
cpp/celeborn/tests/: CMakeLists.txt  DataSumWithReaderClient.cpp  DataSumWithWriterClient.cpp
cpp/celeborn/utils/: CMakeLists.txt  CelebornException.cpp  CelebornException.h  CelebornUtils.cpp  CelebornUtils.h  Exceptions.cpp  Exceptions.h  FmtStdFormatters.h  ProcessBase.cpp  ProcessBase.h  ProtoUtils.h  StackTrace.cpp  StackTrace.h  flags.cpp
cpp/celeborn/utils/tests/: CMakeLists.txt
cpp/demo/celebornReader/: CMakeLists.txt  main.cpp
cpp/scripts/: launch-docker-container.sh  setup-helper-functions.sh  setup-ubuntu.sh
worker/src/main/java/org/apache/celeborn/service/deploy/worker/memory/: MemoryManager.java
worker/src/test/scala/org/apache/celeborn/service/deploy/cluster/: ClusterReadWriteTestWithNONE2.scala  CppWriteJavaReadTestWithNONE.scala  JavaReadCppWriteTestBase.scala  JavaReadCppWriteTestWithNONE.scala  JavaWriteCppReadTestBase.scala
worker/src/test/scala/org/apache/celeborn/service/deploy/component/: StandaloneLifecyleManagerSuite.scala  StandaloneMiniClusterSuite.scala  StandaloneReaderClientSuite.scala  StandaloneWriterClientSuite.scala
